--- a/binarycalculator.css
+++ b/binarycalculator.css
@@ -14,10 +14,11 @@ body {
   
   .container {
     position: relative;
-    width: 350px;
-    height: 510px;
+    max-width: 350px;
+    min-height: 510px;
     border-radius: 20px;
     padding: 40px;
+    margin : 40px;
     box-sizing: border-box;
     background: #ecf0f3;
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
@@ -39,7 +40,7 @@ body {
 label, input, button, select {
     font-size: 1.2rem;
     display: block;
-    width: 100%;
+    max-width: 100%;
     padding: 0;
     border: none;
     outline: none;
@@ -62,15 +63,15 @@ label, input, button, select {
     background: #ecf0f3;
     padding: 10px;
     padding-left: 20px;
-    height: 50px;
+    min-height: 50px;
     font-size: 14px;
     border-radius: 50px;
     box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
   }
   select{
     margin: auto;
-    width: 158px;
-    height: 40px;
+    max-width: 158px;
+    min-height: 40px;
     font-size: 14px;
     border-radius: 20px;
     border: solid 2px rgba(178, 154, 201, 0.815);
