--- a/binarycalculator.css
+++ b/binarycalculator.css
@@ -15,10 +15,10 @@ body {
   .container {
     position: relative;
     max-width: 350px;
-    min-height: 510px;
+    max-height: 510px;
     border-radius: 20px;
     padding: 40px;
-    margin : 40px;
+    margin : 10px;
     box-sizing: border-box;
     background: #ecf0f3;
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
@@ -63,7 +63,7 @@ label, input, button, select {
     background: #ecf0f3;
     padding: 10px;
     padding-left: 20px;
-    min-height: 50px;
+    max-height: 50px;
     font-size: 14px;
     border-radius: 50px;
     box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
@@ -71,7 +71,7 @@ label, input, button, select {
   select{
     margin: auto;
     max-width: 158px;
-    min-height: 40px;
+    max-height: 40px;
     font-size: 14px;
     border-radius: 20px;
     border: solid 2px rgba(178, 154, 201, 0.815);
